--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-headphones"></i> <a href="https://youtu.be/cK3NMZAUKGw">Babymetal - MEGITSUNE</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="https://youtu.be/3yz4KyWc1dQ">Vinnie Moore - Never Been to Barcelona</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="https://youtu.be/5yU8V-FiiqA">Vinnie Moore - Never Been to Barcelona</a></li>
                                 <li><i class="fa fa-headphones"></i> <a href="https://youtu.be/uF6LBY1br40">Samurai Spirits 3- Three Destinies of Lamentation</a></li>
                             </ul>
 
